re PR middle-end/39867 (Wrong result of conditional operator exp < 2 ? 2U : (unsigned int) exp)

2009-04-24  Paolo Bonzini  <bonzini@gnu.org>

	PR middle-end/39867
	* fold-const.c (fold_cond_expr_with_comparison): When folding
	> and >= to MAX, make sure the MAX uses the same type as the
	comparison's operands.

testsuite:
2009-04-24  Paolo Bonzini  <bonzini@gnu.org>

	PR middle-end/39867
	* gcc.dg/pr39867.c: New.

From-SVN: r146702